--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <!-- Favicon will be set at runtime from src/main.jsx. We keep a dedicated link element the script updates. -->
   <link id="favicon" rel="icon" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>anmex</title>
+  <title>anemex</title>
 </head>
 
 <body>
-  <a href="#main" class="sr-only focus:not-sr-only"
-    style="position:absolute;left:0;top:0;z-index:1000;padding:8px;background:#000;color:#fff;">Skip to content</a>
+  <a href="#main" class="sr-only focus:not-sr-only"></a>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
