--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Favicon will be set at runtime from src/main.jsx. We keep a dedicated link element the script updates. -->
   <link id="favicon" rel="icon" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>anemex</title>
+  <title>anemx</title>
 </head>
 
 <body>
